NEXT-9166 - Fix overflow of category names (fixes #39)

--- a/src/Administration/Resources/app/administration/src/app/component/tree/sw-tree-item/sw-tree-item.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/tree/sw-tree-item/sw-tree-item.scss
@@ -212,6 +212,8 @@ $sw-tree-item-color-text: $color-gutenberg;
             text-decoration: inherit;
             padding: 12px 0;
             display: block;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 
